--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
+*,
+::after,
+::before {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url("https://fonts.googleapis.com/css?family=Karla:400|Spectral:400");
+
+html {
+  height: 100%;
+}
+
+
+:root {
+  --var-bg: #efca08;
+  --bg-color: #f2f7f5;
+  --box-shadow: 0px 11px 6px -3px rgba(0, 0, 0, 0.22);
+  --bodyFont: "Karla", sans-serif;
+  --letterSpacing: 1px;
+  --transition: 0.3s ease-in-out all;
+  --max-width: 1120px;
+}
+
+
+
+body {
+  background-color: var(--bg-color);
+  min-height: 100vh;
 }
