--- a/src/index.css
+++ b/src/index.css
@@ -17,16 +17,20 @@ html {
 :root {
   --var-bg: #efca08;
   --bg-color: #f2f7f5;
+  --clr-red: #CF6679;
+  --clr-red2: #F55050;
+  --clr-black: #121212;
   --box-shadow: 0px 11px 6px -3px rgba(0, 0, 0, 0.22);
   --bodyFont: "Karla", sans-serif;
   --letterSpacing: 1px;
-  --transition: 0.3s ease-in-out all;
+  --transition: 1s ease-in-out all;
   --max-width: 1120px;
 }
 
 body {
   background-color: var(--bg-color);
   min-height: 100vh;
+  font-family: var(--bodyFont);
 }
 
 
