--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ html {
   --clr-red2: #F55050;
   --clr-black: #121212;
   --box-shadow: 0px 11px 6px -3px rgba(0, 0, 0, 0.22);
+  --box-sh-footer: 0px -10px 6px -3px rgba(0, 0, 0, 0.22);
   --bodyFont: "Karla", sans-serif;
   --letterSpacing: 1px;
   --transition: 1s ease-in-out all;
